# mspri1-2-order

./: .env  Cargo.toml  Dockerfile  clippy-report.json  cobertura.xml  docker-compose.yml  sonar-project.properties
src/: integration_test.rs  main.rs  model.rs
