[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
serde = { version = "1.0.203", features = ["derive"] }
actix-cors = "0.7.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-chrono-0_4"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.118"
actix-rt = "2.10.0"
actix-http = "3.8.0"
deadpool-postgres = "0.14.0"
